[package]
name = "relgen"
version = "0.1.0"
edition = "2021"
authors = ["Peter Luladjev<relgen@luladjiev.com>"]
description = "CLI tool for generating Pull Requests to multiple repositories"
keywords = ["github", "cli", "rust"]
license = "MIT"
repository = "https://gihub.com/Luladjiev/relgen"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
futures = "0.3.30"
http = "1.1.0"
octocrab = "0.39.0"
serde = { version = "1.0.209", features = ["derive"] }
tokio = { version = "1.39.3", features = ["rt", "rt-multi-thread", "macros"] }
